# Franka_Pruning_Controller

./: .gitignore  README.md
move_arm/: CMakeLists.txt  package.xml
move_arm/config/: franka_servo.yaml
move_arm/include/move_arm/: move_arm.hpp
move_arm/launch/: franka_moveit_servo.launch.py
move_arm/meshes/collisions/: tomato-plant.stl
move_arm/src/: move_arm.cpp  plant_loader_node.cpp
move_arm_msgs/: CMakeLists.txt  package.xml
move_arm_msgs/msg/: JointTorques.msg
robot_bringup/: package.xml  setup.py
robot_bringup/launch/: bringup_2.launch.py
robot_bringup/robot_launch/robot_moveit/: move_arm.launch.py  move_group.launch.py  rviz.launch.py  servo.launch.py
